--- a/apple-pie/styles/style.css
+++ b/apple-pie/styles/style.css
@@ -1,4 +1,5 @@
-body {
+body,
+html {
   font-family: Arial, Helvetica, sans-serif;
   margin-left: 50px;
   margin-right: 50px;
@@ -6,18 +7,17 @@ body {
   margin-bottom: 30px;
 }
 
-.container {
+.apple-pie {
+  width: 100%;
+  margin-bottom: 30px;
 }
 
-#apple-pie-img {
-  width: 500px;
-}
-
-#texto {
+.text {
+  text-align: center;
   position: absolute;
-  font-size: 32px;
-  left: 250px;
-  top: 250px;
+  font-size: 30px;
+  top: 400px;
+  left: 500px;
   color: white;
 }
 
